--- a/index.css
+++ b/index.css
@@ -5,7 +5,7 @@
 
 body, .card-equipe{
     font-family: 'Noto Sans', sans-serif;
-    background-image: url("images/background-2.png");
+    background-color: #DBC8A3;
 }
 
 .card-equipe-footer{
@@ -15,7 +15,7 @@ border-radius: 15px;
 }
 
 .menu-principal{
-    background-color: rgb(26, 25, 25);
+    background-color: rgb(5, 5, 5);
     border-radius: 7px;
 }
 
